--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.1.6",
     "@angular/common": "^20.1.0",
     "@angular/compiler": "^20.1.0",
     "@angular/core": "^20.1.0",
@@ -30,6 +31,7 @@
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.5",
     "express": "^5.1.0",
+    "ng-zorro-antd": "^20.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
